Bug Fix: Text input fields no longer shift elements on focus.

--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -21,20 +21,22 @@
 .register-input-password {
     width: 290px;
     padding: 2px;
+    margin: 1px;
 }
 .register-input-username:focus,
 .register-input-password:focus {
+    margin: 0;
     border: 2px solid #1e537c;
     -webkit-box-shadow: 0px 0px 0px -7px #000000, 0px 0px 3px 2px rgba(12,34,51,0.52); 
     box-shadow: 0px 0px 0px -7px #000000, 0px 0px 3px 2px rgba(12,34,51,0.52);
 }
 
 .register-input-password {
-    margin: 0 0 10px;
+    /* margin: 0 0 10px; */
 }
 
 .register-button-wrapper {
-    margin-bottom: 20px;
+    margin: 11px 0 20px 0;
 }
 
 .register-button-submit {
